# Linux-basics-2020

./: Dockerfile  README.md  index.md  task1.txt  task2.txt
.github/workflows/: main.yml  main1.yml
seminar02/task02/: task02.sh
seminar02/task03/: task03.sh
seminar02/task04/: main.py  task04.sh
seminar02/task05/: task05.sh
seminar02/task06/: task06.sh  test06.py
seminar02/task07/: digits.txt  task07.sh
seminar02/task08/: task08.sh  test08.py
seminar02/task09/: task09.sh
seminar03/task01/: task01.sh
seminar03/task02/: task02.sh
seminar03/task03/: task03.sh
seminar03/task04/: task04.sh
seminar03/task05/: task05.sh
seminar03/task06/: task06.sh
seminar03/task07/: task07.sh
seminar04/: checker.py
seminar04/task01/: Makefile  test01.py
seminar04/task01/src/: generator.sh
seminar04/task02/: CMakeLists.txt
seminar05/: README.md  task1_1.txt  task1_2.txt  task1_3.txt  task1_4.txt  task1_5.txt  task1_6.txt  task2.md  task4.sh
